<!-- Authors: Wesley Angus & Montgomery Alban -->
<resources>
    <string name="app_name">New Game Release Manager</string>
    <string name="show_game_list">Show List of New Game Releases</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_show_new_game_releases">Show New Game Releases</string>
    <string name="will_buy">When will you purchase this game?</string>
    <string name="title_activity_modify_game_list">Modify Game List</string>
    <string name="modify">Modify</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="mod_success">New Game List updated successfully!</string>
    <string name="games_added">New Game Releases added to database!</string>
    <string name="games_downloaded">New Game Releases parsed + downloaded!</string>
    <string name="about">About the App</string>
    <string name="title">Title:</string>
    <string name="rDate">Release Date:</string>
    <string name="description">Description:</string>
    <string name="more_info">More Info</string>
    <string name="reset">Reset</string>
    <string name="item_click_instructions">Click on entry for more information,
        as well as to state when you are planning to purchase it.</string>
    <string name="will_i_buy">I am planning to purchase this item:</string>
    <string name="title_activity_about">About</string>
    <string name="about_txt">
        &lt;p>&lt;i>This application was co-created by Wesley Angus and Montgomery Alban for a final
        project in the CSCI 4100 course at UOIT (also known as Mobile Devices).&lt;/i>&lt;/p>
        &lt;p>This is an application that lets you view and manage a list of upcoming video games,
        as well as when you are planning to purchase each game (if at all).&lt;/p>
        &lt;p>The RSS Feed used in this application is taken from one of the free feeds available
        from &lt;i>%1$s&lt;/i>, specifically the list of upcoming releases at:
        &lt;a href=\"%2$s\">&lt;i>%2$s&lt;/i>&lt;/a>.&lt;/p>
    </string>
    <string name="sound_reference">&lt;p>The sound file \"%4$s\" was taken from user \"%2$s\" on
        &lt;i>%3$s&lt;/i>, and is being used under the Creative Commons Attribution 3.0 license.&lt;p>
        link: &lt;a href=\"%3$s\">%3$s&lt;/a>&lt;/p>&lt;/p></string>
    <string name="reference_feed_site">GameSpot.com</string>
    <string name="reference_feed_url">gamespot.com/feeds/new-games/</string>
    <string name="bought">Bought</string>
    <string-array name="sounds_reference_arrays">
        <!--sound_site-->
        <item>freesound.org</item>
        <!--sound_user-->
        <item>bubaproducer</item>
        <!--sound_location-->
        <item>https://www.freesound.org/people/bubaproducer/sounds/151022/</item>
        <!--sound_name-->
        <item>laser-shot-silenced.wav</item>
        <!--sound_site-->
        <item>freesound.org</item>
        <!--sound_user-->
        <item>RunnerPack</item>
        <!--sound_location-->
        <item>https://www.freesound.org/people/RunnerPack/sounds/87035/</item>
        <!--sound_name-->
        <item>menusel.wav</item>
    </string-array>
    <string name="title_activity_popup_dialog">Confirm Delete Dialog</string>
    <string name="never_will_buy_dialog">
        This action will remove the game permanently from the list of new game releases, and will
        not be added back upon re-downloading the list of new game releases. Is that okay?
    </string>
    <string name="add_to_bought_list_dialog">
        This action will remove the game permanently from the list of new game releases,
        and add it to the list of purchased games. Is that okay?
    </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="calendar_add">Add To\nCalendar</string>
    <string name="bought_btn_txt">View Bought Game List</string>
    <string name="title_activity_view_bought_game_list">ViewBoughtGameList</string>
    <string name="bought_item_click_instructions">Click for more information.</string>
    <string name="search_hint">Find New Game Releases by Title</string>
    <string name="search">Search</string>
    <string name="bought_search_hint">Find Bought Games by Title</string>
    <string name="title_activity_maps">You and Choice</string>
    <string name="find_stores">Find Stores</string>
    <string name="reset_dialog">This action will clear all of the data save on this phone and download the games currently available in the feed. Therefore any games not currently available in the feed will be removed permanently. Is that okay?</string>
</resources>
