<?xml version="1.0" encoding="utf-8"?>
<!-- Authors: Wesley Angus & Montgomery Alban -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainMenuActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/aboutBtn"
        android:layout_above="@+id/boughtBtn">

        <csci4100.uoit.ca.csci4100_final_project.SpriteView
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_game_list"
        android:id="@+id/showGameList_btn"
        android:onClick="showGameList"
        android:enabled="false"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:id="@+id/aboutBtn"
        android:onClick="viewAboutText"
        android:layout_below="@+id/showGameList_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bought_btn_txt"
        android:id="@+id/boughtBtn"
        android:onClick="viewBoughtList"
        android:layout_above="@+id/showGameList_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="36dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/findStores_btn"
        android:enabled="false"
        android:text="@string/find_stores"
        android:onClick="viewMap"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:id="@+id/resetBtn"
        android:onClick="deleteAllConfirm"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
