<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GameDetailAndModifyActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/saveBtn"
        android:onClick="saveWillBuyProperty"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/title_label" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/cancelBtn"
        android:onClick="cancelModify"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/willBuy_spinner"
        android:layout_marginEnd="29dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/title"
        android:id="@+id/title_label"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/rDate"
        android:id="@+id/rDate_label"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/title_label"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/description"
        android:id="@+id/desc_label"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/rDate_label"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/willBuy_spinner"
        android:layout_below="@+id/willBuy_tView"
        android:layout_marginTop="7dp"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/will_buy"
        android:id="@+id/willBuy_tView"
        android:layout_below="@+id/desc_label"
        android:layout_alignParentStart="true"
        android:layout_marginTop="60dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/more_info"
        android:id="@+id/linkBtn"
        android:onClick="openGameLink"
        android:layout_above="@+id/saveBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/title_txt"
        android:layout_marginStart="4dp"
        android:layout_alignTop="@+id/title_label"
        android:layout_toEndOf="@+id/title_label" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/rDate_txt"
        android:layout_marginStart="4dp"
        android:layout_alignTop="@+id/rDate_label"
        android:layout_toEndOf="@+id/rDate_label" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/desc_txt"
        android:layout_marginStart="4dp"
        android:layout_alignTop="@+id/desc_label"
        android:layout_toEndOf="@+id/desc_label" />

</RelativeLayout>
